	* Source/DocMakefile: New makefile for building documentation
	without having to build binaries. Also add flag for macros template.
	* Source/GNUmakefile: Removed documentation building rules.
	* Documentation/GNUmakefile: Use DocMakefile
	* Source/NSWindow.m: Slight documentation update/addition.
	* Source/NSView.m: ditto.
	* Source/NSToolbar.m: ditto.
	* Source/NSTextView.m: ditto.

2002-10-11  Adam Fedor  <fedor@gnu.org>

	* Headers/gnustep/gui/NSOpenPanel.h: Move comments to source file
	as autogsdoc.
	* Headers/gnustep/gui/NSSavePanel.h: Idem.
	* Source/NSOpenPanel.m: Document.
	* Source/NSSavePanel.m: Idem.

	* Source/NSBrowser.m: Change NSDebugLog to NSDebugLLog (or remove).
	* Source/NSButtonCell.m, Source/NSCell.m, Source/NSControl.m,
	Source/NSEvent.m, Source/NSFontManager.m, Source/NSFontPanel.m,
	Source/NSImageCell.m, Source/NSMatrix.m, Source/NSMenu.m,
	Source/NSMenuItem.m, Source/NSResponder.m, Source/NSRulerView.m,
	Source/NSScrollView.m, Source/NSSplitView.m, Source/NSStepper.m,
	Source/NSTableHeaderView.m, Source/NSWindow.m: Idem.

Fri Oct 11 15:10:42 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Headers/gnustep/gui/AppKit.h: Include AppKit/NSFileWrapper.h
	(Reported by Ludovic Marcotte <ludovic@Sophos.ca>).
	
Fri Oct 11 01:37:57 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* TextConverters/RTF/RTFConsumer.m ([RTFAttribute -currentFont]):
	If the font can't be found in the usual ways, try to get it as a
	composite font name like 'FontFamily-Face'
	(Patch by Georg Fleischmann <georg@vhf.de> modified).

Fri Oct 11 01:15:55 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/NSFont.m (getNSFont): If fontWithName:size: returns nil,
	try various approximations to get a font.

Fri Oct 11 01:02:24 2002  Nicola Pero  <n.pero@mi.flashnet.it>

	Patch by Georg Fleischmann <georg@vhf.de>:
	* Source/NSFont.m ([NSFont -initWithName:matrix:fix:]): Release
	self and return nil if the font info is nil.  This makes
	[NSFontManager -convertFont:...] work.
	