@@ -17,6 +17,8 @@
 	* Source/NSView.m: ditto.
 	* Source/NSToolbar.m: ditto.
 	* Source/NSTextView.m: ditto.
+	* Source/NSMatrix.m: ditto.
+	* Source/NSLayoutManager.m: ditto.
 
 2002-10-11  Adam Fedor  <fedor@gnu.org>
 
